fix(console): handle text overflow in react-select dropdown

--- a/app/assets/stylesheets/folio/console/modules/react/_ordered_multiselect_app.sass
+++ b/app/assets/stylesheets/folio/console/modules/react/_ordered_multiselect_app.sass
@@ -37,6 +37,9 @@
     margin-left: $spacer / 2
     cursor: pointer
 
+  .react-select__option
+    overflow-wrap: break-word
+
   .react-select__control
     border: 0
     box-shadow: none !important
